Bug 1187724 - Don't dispatch KeyboardEvents when the target of WM_APPCOMMAND is a windowed plug-in for preventing deadlock. r=jimm, a=ritu